# fastloop-guard

./: AGENT.md  Cargo.toml  INSIGHT_VERIFICATION.md  README.md
docs/: FUTURE-INTEGRATION.md
src/: cache.rs  engine.rs  failure_tracker.rs  gate.rs  hash.rs  lib.rs  main.rs  protocol.rs  rate_limiter.rs  similarity.rs  validator.rs
tests/: test_cache.rs  test_integration.rs  test_similarity.rs
