[package]
name = "fastloop-guard"
version = "0.2.0"
edition = "2021"

[dependencies]
blake2 = "0.10"
lru = "0.12"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
